--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ img {
     width: 5%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    margin: .8rem;
+    margin: 1rem;
 }
 
 h1, h2 {
@@ -25,7 +25,6 @@ header {
     justify-content: space-between;
     align-items: center;
     font-size: 1.5rem;
-    padding: 1rem;
     background-color: #6D94C5;
     color: white;
 }
@@ -46,8 +45,9 @@ header div {
 nav {
     display: flex;
     flex-direction: row;
-    gap: 5rem;
+    gap: 2rem;
     padding-right: 3rem;
+    font-size: 1.2rem;
 }
 
 .atas {
