--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@ body {
     font-family: "Nunito", sans-serif;
     margin: 0;
     padding: 0;
-    border: 1px solid black;
+}
+
+main {
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
 img {
-    width: 5%;
+    width: clamp(20px, 5vw, 40px);
     aspect-ratio: 1 / 1;
     object-fit: cover;
     margin: 1rem;
@@ -27,6 +31,7 @@ header {
     font-size: 1.5rem;
     background-color: #6D94C5;
     color: white;
+    box-shadow: 0 0px 10px rgba(0,0,0,0.9);
 }
 
 header a {
@@ -53,7 +58,7 @@ nav {
 .atas {
     text-align: center;
     padding: 4rem 0 4rem 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #ddd;
     margin: 0;
 }
 
@@ -69,16 +74,18 @@ nav {
 .tengah {
     display: grid;
     grid-template-columns: 1.5fr 2.5fr 2fr;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #ddd;
 }
 
 .tengah h1 {
     background-color: #6D94C5;
     color: white;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 5px;
 }
 
 .tengah-isi {
-    border-right: 1px solid black;
+    border-right: 1px solid #ddd;
 }
 
 .tengah-isi.projects h1 {
@@ -91,7 +98,7 @@ nav {
 }
 
 .tengah-isi.projects li {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #ddd;
     padding: 1rem 0 .5rem 1.5rem;
 }
 
@@ -104,7 +111,7 @@ nav {
 }
 
 .experience .satu {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #ddd;
 }
 
 .tengah-isi.experience h1,
@@ -131,6 +138,8 @@ nav {
 .bawah h1 {
     background-color: #6D94C5;
     color: white;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 5px;
 }
 
 .wrapper-ulasan {
@@ -139,7 +148,7 @@ nav {
 }
 .ulasan {
     display: block;
-    border: 1px solid black;
+    border: 1px solid #ddd;
     border-radius: 30px;
     margin: 1rem 1.5rem 2rem 1.5rem;
     padding: 3rem 1.5rem;
@@ -172,7 +181,7 @@ footer {
         flex-direction: column;
         padding: 0;
         background-color: transparent;
-        color: black;
+        color: #ddd;
         font-size: 1.2rem;
     }
 
